docs/v7.1.2/properties/P110.md
---
layout: page
title: P110 a augmenté (a été augmenté par)
titleEn: P110 augmented (was augmented by) - a augmenté (a été augmenté par)
permalink: /v7.1.2/proprietes/P110
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E79 Part Addition</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E79_Ajout_d'élément</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
<p>E11 Modification. P31 has modified (was modified by): E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E11_Modification</code>. <code class="language-plaintext highlighter-rouge">P31_a_modifié (a_été_modifié_par)</code> : <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many, necessary (1,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs, nécessaire (1,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property identifies the instance of E24 Physical Human-Made Thing that is added to (augmented) in an instance of E79 Part Addition.</p>
<p>Although an instance of E79 Part Addition event normally concerns only one instance of E24 Physical Human-Made Thing, it is possible to imagine circumstances under which more than one item might be added to (augmented). For example, the artist Jackson Pollock trailing paint onto multiple canvasses.</p>
</td>
<td>
<p>Cette propriété identifie l'instance de <code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code> qui reçoit un ajout (est augmentée) par une instance de <code class="language-plaintext highlighter-rouge">E79_Ajout_d'élément</code>.</p>
<p>Bien qu'une instance de <code class="language-plaintext highlighter-rouge">E79_Ajout_d'élément</code> ne concerne normalement qu'une instance de <code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code>, il est possible d'imaginer des circonstances au cours desquelles plus d'un élément pourrait recevoir un ajout (être augmenté) [n.d.t. par une seule instance de <code class="language-plaintext highlighter-rouge">E79_Ajout_d'élément</code>]. Par exemple, l’artiste Jackson Pollock a effectué des traînées de peinture sur plusieurs toiles en même temps.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>The final nail-insertion Event (E79) augmented Coffin of George VI (E22). (<a href="https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state"><span class="underline">https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state</span></a>) </p>
</li>
<li><p>The attachment of the bronze hand of the Alpi Marittime sculpture (E79) augmented the tree of the Alpi Marittime sculpture (E20). [https://giuseppepenone.com/en/words/maritime-alps] (Mangini, 2010)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>L’évènement d’insertion du dernier clou (<code class="language-plaintext highlighter-rouge">E79_Ajout_d'élément</code>) a augmenté (<code class="language-plaintext highlighter-rouge">P110_a_augmenté</code>) le cercueil de George VI (<code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>) (<a href="https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state"><span class="underline">https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state</span></a>)</p>
</li>
<li><p>L’apposition de la main de bronze de la sculpture <em>Alpi Marittime</em> (<code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code>) a augmenté (<code class="language-plaintext highlighter-rouge">P110_a_augmenté</code>) l’arbre de la sculpture <em>Alpi Marittime </em>(<code class="language-plaintext highlighter-rouge">E20_Objet_biologique</code>) (https://giuseppepenone.com/en/words/maritime-alps) (Mangini, 2010) </p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P110(x,y) ⇒ E79(x)</p>
<p>P110(x,y) ⇒ E18(y)</p>
<p>P110(x,y) ⇒ P31(x,y)</p>
</td>
<td>
<p>P110(x,y) ⇒ E79(x)</p>
<p>P110(x,y) ⇒ E18(y)</p>
<p>P110(x,y) ⇒ P31(x,y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
